Revision history for Net::DNS                                     -*-text-*-
=============================

*** 0.53_02 Not released yet

Fix rt.cpan.org 14624 

  Documentation of Nameserver.pm Replyhandler fixed.

Fix rt.cpan.org 14700

  mistyped _name2wire helper function name. Noticed and patched by Simon 
  Josefsson.

Fix rt.cpan.org 13944

  Terminating dot not printed when printing SRV record
  Acknowledgements Jakob Schlyter. There might be theoretical corner
  cases where rdata elements are not properly read. The code needs an
  audit for this.

Fix srcport for socket creation in bgsend method

   Lionel Cons noted and patched a small bug in bgsocket creation code for
   lib/Net/DNS/Resolver/Base.pm


*** 0.53_01 July 31, 2005

Fix rt.cpan.org 13809

   "Phar" noted that the peerhost is never passed to the make_reply function
   in nameserver.pm and provided the trivial patch. 

Fix rt.cpan.org 13922

    Fixed a problem with persistent TCP sockets which was introdcuced
    because of using the address family as an index to the array of
    persistent sockets. 

    Used AF_UNSPEC for the array index for the TCP socket; just to choose
    a number. The key to the persistent sockets is the remote nameserver:port 
    combination.

    Acknowledgements to Mike Mitchell for reporting the bug and testing
    the solution.

Feat t/01-resolve will not try to do tests from private IP space; hopefully
    that cuts down on the number of false positives.


*** 0.53 July 22, 2005

Fix rt.cpan.org 13669

    Danny Thomas provided a somewhat more elegant line of code for the 
    typesbyval regexp.

Fix rt.cpan.org 13534 

    Net::DNS::Resolver::Recurse would bail out when it happened to run
    into lame servers.

Doc rt.cpan.org 13387

    Documented the BUG caught by Robert Martin-Legène;
    Net::DNS::Nameserver running with multiple IP interfaces might
    violate section 4 of RFC2181.


Fix IPv6 on AIX
