@@ -5,7 +5,8 @@ Revision history for Net::DNS                                     -*-text-*-
 
 Fix rt.cpan.org 14624 
 
-  Documentation of Nameserver.pm Replyhandler fixed.
+  Fixed documentation of Nameserver.pm Replyhandler and fixed a bug that prevented the
+  peerhost to be set.
 
 Fix rt.cpan.org 14700
 
